--- a/product-view.html
+++ b/product-view.html
@@ -45,8 +45,8 @@
     <div class="pv-title">
       <h1 id="pv-title">Product</h1>
       <div class="pv-controls">
-        <a id="pv-download" class="btn btn-small btn-accent" href="#" download>⬇ Download PDF</a>
-        <label>Items per page
+        <a id="pv-download" class="btn btn-small btn-accent" href="#" download>Download PDF</a>
+        <label>Items
           <select id="pv-size" style="margin-left:.4rem">
             <option value="6">6</option>
             <option value="8" selected>8</option>
